# adventofcode-2023

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  day1_solution1.cpp  day1_solution1.h  lib.cpp  lib.h  old-devlog.md  solutions.cpp  test.cpp
day01/: main.cpp  test.cpp
day02/: test.cpp
day03/: test.cpp
day04/: solution1.cpp  test.cpp
day05/: test.cpp
day05/input/: example2.txt
day06/: solution1.h  test.cpp
day06/input/: input2.txt
day07/: test.cpp
day08/: test.cpp
day09/: solution1.cpp  test.cpp
day1/: main.cpp  solution1.h  test.cpp
day10/: test.cpp
day11/: solve.cpp
day12/: solve.cpp  solve2.cpp
day13/: solve.cpp
day14/: solve.cpp
day2/: test.cpp
day3/: solution1.cpp  solution1.h  test.cpp
day4/: test.cpp
day5/: solution1.cpp  solution1.h  test.cpp
day6/: test.cpp
day6/input/: example1.txt
day7/: solution1.h  test.cpp
day8/: test.cpp
day9/: test.cpp
lib/: lib.cpp
src/: lib.cpp  lib.h
src/day1/: main.cpp  solution1.cpp  test.cpp
src/day10/: solution1.cpp  solution1.h  test.cpp
src/day10/outputs/: out1.txt  out2.txt
src/day11/: solve.cpp
src/day11/input/: t1.txt
src/day12/: solve.cpp  solve2.cpp
src/day2/: solution1.cpp  solution1.h  test.cpp
src/day3/: test.cpp
src/day4/: solution1.h  test.cpp
src/day5/: solution2.cpp  solution2.h  test.cpp
src/day6/: solution1.cpp  test.cpp
src/day7/: solution1.cpp  solution1.h  test.cpp
src/day8/: solution1.cpp  solution1.h  test.cpp
src/day9/: solution1.cpp  solution1.h  test.cpp
template/: solution1.cpp  solution1.h  solve.cpp  test.cpp
